--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/parallax": "^9.7.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2"
   },
